didnt need seperate connection folder, successfully setup unit testing envirmonment for mongo crud methods, one test working so far

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "collectCoverage": true
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest --detectOpenHandles",
     "react-dev": "webpack --watch",
     "install:db": "cd db/ && npm install",
     "seed:db": "cd db/ && npm run seed",
