created file for integration testing using jest, added runinband command to jest cli

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "collectCoverage": true
   },
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --runInBand",
     "react-dev": "webpack --watch",
     "install:db": "cd db/ && npm install",
     "seed:db": "cd db/ && npm run seed",
     "install:static": "cd www/static-server && npm install",
-    "start:static": "cd www/static-server && npm run server-dev"
+    "start:static": "cd www/static-server && npm run server-dev",
+    "install:api": "cd www/api && npm install",
+    "start:api": "cd www/api && npm run server-dev"
   },
   "repository": {
     "type": "git",
@@ -30,7 +32,8 @@
     "jest": "^24.1.0",
     "mongodb": "^3.1.13",
     "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "supertest": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
