--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:static": "cd www/static-server && npm run server-dev",
     "install:api": "cd www/api && npm install",
     "start:api": "cd www/api && npm run server-dev",
-    "install:all": "npm install && npm run install:db && run npm install:static && npm run install:api"
+    "install:all": "npm install && npm run install:db && npm run install:static && npm run install:api"
   },
   "repository": {
     "type": "git",
