--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "start:static": "cd www/static-server && npm run server-dev",
     "install:api": "cd www/api && npm install",
     "start:api": "cd www/api && npm run server-dev",
-    "install:all": "npm install && npm run install:db && npm run install:static && npm run install:api"
+    "install:socket": "cd www/socket-server npm install",
+    "start:socket": "cd www/socket-server && npm run socket-dev",
+    "install:all": "npm install && npm run install:db && npm run install:static && npm run install:api && npm run install:socket",
+    "start:all": "npm run start:static | npm run start:api | npm run start:socket"
   },
   "repository": {
     "type": "git",
@@ -37,6 +40,7 @@
     "mongodb": "^3.1.13",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "socket.io-client": "^2.2.0",
     "supertest": "^3.4.2"
   },
   "devDependencies": {
