starting auth server

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start:api": "cd www/api && npm run server-dev",
     "install:socket": "cd www/socket-server npm install",
     "start:socket": "cd www/socket-server && npm run socket-dev",
+    "start:auth": "cd www/auth && npm run server-dev",
     "install:all": "npm install && npm run install:db && npm run install:static && npm run install:api && npm run install:socket",
     "start:all": "npm run start:static | npm run start:socket"
   },
