--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "install:socket": "cd www/socket-server npm install",
     "start:socket": "cd www/socket-server && npm run socket-dev",
     "install:all": "npm install && npm run install:db && npm run install:static && npm run install:api && npm run install:socket",
-    "start:all": "npm run start:static | npm run start:socket"
+    "start:all": "npm run start:static | npm run start:socket",
+    "static:pm2": "cd www/static-server && npm run server-pm2",
+    "socket:pm2": "cd www/socket-server && npm run socket-pm2",
+    "all:pm2": "npm run static:pm2 | npm run socket:pm2"
   },
   "repository": {
     "type": "git",
@@ -40,6 +43,7 @@
     "express": "^4.16.4",
     "jest": "^24.1.0",
     "mongodb": "^3.1.13",
+    "pm2": "^3.4.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "socket.io": "^2.2.0",
@@ -57,6 +61,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3"
