--- a/www/socket-server/package.json
+++ b/www/socket-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "socket-dev": "node src/index.js"
+    "socket-dev": "node src/index.js",
+    "socket-pm2": "pm2 start src/index.js --no-daemon"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "nodemon": "^1.18.10",
+    "pm2": "^3.4.1",
     "socket.io": "^2.2.0"
   }
 }
